--- a/Skin/BlueVision/screens/webradio_Home.xaml
+++ b/Skin/BlueVision/screens/webradio_Home.xaml
@@ -47,7 +47,8 @@
                 <Label VerticalAlignment="Center" HorizontalAlignment="Right"
                        DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
                        Content="{Binding [Genres]}" Color="{ThemeResource TextColor}" />
-                <Label VerticalAlignment="Center" HorizontalAlignment="Right" Color="{ThemeResource TextColor}"
+                <Label VerticalAlignment="Center" HorizontalAlignment="Right"
+                       Color="{ThemeResource TextColor}"
                        DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}">
                   <Label.Content>
                     <Binding Path="[Bitrate]" Converter="{StaticResource StringFormatConverter}"
@@ -69,13 +70,15 @@
               <Control Grid.Column="1" Grid.Row="0" Style="{ThemeResource Shadow_3_28}" Margin="13.8" />
               <!-- SHADOW -->
 
-              <Image Grid.Column="1" Grid.Row="0" Thumbnail="True" Stretch="Fill" Height="185" Width="185"
+              <Image Grid.Column="1" Grid.Row="0" Thumbnail="True" Stretch="Fill" Height="185"
+                     Width="185"
                      Source="{Binding [ImageSrc]}" FallbackSource="{Binding [DefaultIconSrc]}"
                      DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}">
                 <Image.OpacityMask>
                   <VisualBrush>
                     <VisualBrush.Visual>
-                      <Border Name="mask" Background="White" CornerRadius="21" BorderThickness="0" BorderBrush="Black"
+                      <Border Name="mask" Background="White" CornerRadius="21"
+                              BorderThickness="0" BorderBrush="Black"
                               Margin="2" />
                     </VisualBrush.Visual>
                   </VisualBrush>
@@ -84,13 +87,16 @@
             </Grid>
           </StackPanel>
 
-          <StackPanel DockPanel.Dock="Left" Orientation="Vertical" Margin="0,0,20,0" VerticalAlignment="Stretch"
+          <StackPanel DockPanel.Dock="Left" Orientation="Vertical" Margin="0,0,20,0"
+                      VerticalAlignment="Stretch"
                       HorizontalAlignment="Left">
-            <Label DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" Color="{ThemeResource TextColor}"
+            <Label DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
+                   Color="{ThemeResource TextColor}"
                    FontFamily="DefaultBold"
                    Content="{Binding [Name]}" Margin="0" Wrap="True" HorizontalAlignment="Stretch"
                    VerticalAlignment="Stretch" />
-            <Label DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" Color="{ThemeResource TextColor}"
+            <Label DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
+                   Color="{ThemeResource TextColor}"
                    Opacity="0.7"
                    Content="{Binding [Description]}" Wrap="True" HorizontalAlignment="Stretch"
                    VerticalAlignment="Stretch"
@@ -99,7 +105,8 @@
         </DockPanel>
         <Label DockPanel.Dock="Top" VerticalAlignment="Center" HorizontalAlignment="Left"
                DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
-               Content="{Binding [Indx]}" FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource TextColor}"
+               Content="{Binding [Indx]}" FontSize="{ThemeResource SmallFontSize}"
+               Color="{ThemeResource TextColor}"
                FontFamily="DefaultBold" Margin="10,-85,0,0" />
       </DockPanel>
     </ControlTemplate>
