--- a/Skin/WMCSkin/screens/webradio_Filter.xaml
+++ b/Skin/WMCSkin/screens/webradio_Filter.xaml
@@ -37,7 +37,8 @@
                  HorizontalAlignment="Right" />
 
           <!-- Countrys -->
-          <Label Grid.Column="0" Grid.Row="1" Content="[Webradio.Filter.Country]" HorizontalContentAlignment="Center"
+          <Label Grid.Column="0" Grid.Row="1" Content="[Webradio.Filter.Country]"
+                 HorizontalContentAlignment="Center"
                  HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center"
                  Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}" />
           <ListView x:Name="lvCountrys" Grid.Column="0" Grid.Row="2" Margin="10"
@@ -60,7 +61,8 @@
                  FontSize="{ThemeResource SmallerFontSize}" />
 
           <!-- Citys -->
-          <Label Grid.Column="1" Grid.Row="1" Content="[Webradio.Filter.City]" HorizontalContentAlignment="Center"
+          <Label Grid.Column="1" Grid.Row="1" Content="[Webradio.Filter.City]"
+                 HorizontalContentAlignment="Center"
                  HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center"
                  Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}" />
           <ListView x:Name="lvCitys" Grid.Column="1" Grid.Row="2" Margin="10"
@@ -83,7 +85,8 @@
                  FontSize="{ThemeResource SmallerFontSize}" />
 
           <!-- Genres -->
-          <Label Grid.Column="2" Grid.Row="1" Content="[Webradio.Filter.Genres]" HorizontalContentAlignment="Center"
+          <Label Grid.Column="2" Grid.Row="1" Content="[Webradio.Filter.Genres]"
+                 HorizontalContentAlignment="Center"
                  HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center"
                  Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}" />
           <ListView x:Name="lvGenres" Grid.Column="2" Grid.Row="2" Margin="10"
