--- a/Skin/WMCSkin/screens/webradio_FullScreenContent.xaml
+++ b/Skin/WMCSkin/screens/webradio_FullScreenContent.xaml
@@ -59,8 +59,10 @@
 
         <mp_audio_viz:AudioSpectrumAnalyzer Grid.ZIndex="100" Grid.Row="1" Grid.ColumnSpan="3" Width="1900"
                                             Height="280"
-                                            HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-260,0,0"
-                                            x:Name="SpectrumAnalyzer" Style="{ThemeResource SpectrumAnalyzerStyle}" />
+                                            HorizontalAlignment="Center" VerticalAlignment="Top"
+                                            Margin="0,-260,0,0"
+                                            x:Name="SpectrumAnalyzer"
+                                            Style="{ThemeResource SpectrumAnalyzerStyle}" />
 
         <Grid Grid.Row="1" Grid.ColumnSpan="3" Margin="0,50,0,0">
           <Grid.RowDefinitions>
@@ -110,20 +112,26 @@
                  FontSize="{ThemeResource BigFontSize}"
                  Content="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.CurrentStreamTitle}"
                  Color="{ThemeResource TextColor}" />
-          <Label x:Name="Genre" Grid.Row="1" Grid.Column="1" Scroll="Auto" FontSize="{ThemeResource BigFontSize}"
+          <Label x:Name="Genre" Grid.Row="1" Grid.Column="1" Scroll="Auto"
+                 FontSize="{ThemeResource BigFontSize}"
                  Content="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.CurrentStreamGenres}"
                  Color="{ThemeResource TextColor}" />
-          <Label x:Name="City" Grid.Row="2" Grid.Column="1" Scroll="Auto" FontSize="{ThemeResource BigFontSize}"
+          <Label x:Name="City" Grid.Row="2" Grid.Column="1" Scroll="Auto"
+                 FontSize="{ThemeResource BigFontSize}"
                  Content="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.CurrentStreamCity}"
                  Color="{ThemeResource TextColor}" />
-          <Label x:Name="Country" Grid.Row="3" Grid.Column="1" Scroll="Auto" FontSize="{ThemeResource BigFontSize}"
+          <Label x:Name="Country" Grid.Row="3" Grid.Column="1" Scroll="Auto"
+                 FontSize="{ThemeResource BigFontSize}"
                  Content="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.CurrentStreamCountry}"
                  Color="{ThemeResource TextColor}" />
-          <Image Grid.Row="4" Grid.Column="1" Margin="0,5,0,0" Stretch="Uniform" Height="40" HorizontalAlignment="Left"
+          <Image Grid.Row="4" Grid.Column="1" Margin="0,5,0,0" Stretch="Uniform" Height="40"
+                 HorizontalAlignment="Left"
                  VerticalAlignment="Top">
             <Image.Source>
-              <Binding Source="{StaticResource Model}" Path="PlayerUIContributor.CurrentStreamLanguageCode"
-                       Converter="{StaticResource StringFormatConverter}" ConverterParameter="{}LanguageFlags\{0}.png" />
+              <Binding Source="{StaticResource Model}"
+                       Path="PlayerUIContributor.CurrentStreamLanguageCode"
+                       Converter="{StaticResource StringFormatConverter}"
+                       ConverterParameter="{}LanguageFlags\{0}.png" />
             </Image.Source>
           </Image>
 
@@ -161,7 +169,8 @@
             <Button x:Name="BackButton" Style="{ThemeResource NavigateBackButtonStyle}" Margin="5"
                     HorizontalAlignment="Left" VerticalAlignment="Center"
                     Command="{Command Source={Service WorkflowManager},Path=NavigatePop,Parameters=1}" />
-            <Button x:Name="HomeButton" Style="{ThemeResource HomeButtonStyle}" Margin="5" HorizontalAlignment="Left"
+            <Button x:Name="HomeButton" Style="{ThemeResource HomeButtonStyle}" Margin="5"
+                    HorizontalAlignment="Left"
                     VerticalAlignment="Center"
                     Command="{Command Source={Service WorkflowManager},Path=NavigatePush,Parameters=7F702D9C-F2DD-42da-9ED8-0BA92F07787F}" />
           </StackPanel>
@@ -204,7 +213,8 @@
           </StackPanel>
         </Grid>
 
-        <DockPanel x:Name="OSD_RightPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" LastChildFill="false"
+        <DockPanel x:Name="OSD_RightPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"
+                   LastChildFill="false"
                    IsVisible="{Binding Source={StaticResource AudioPlayerModel}, Path=IsOSDVisible}">
           <mp_special_controls:PlayerControl x:Name="PrimaryOSD" DockPanel.Dock="Bottom"
                                              Style="{ThemeResource PrimaryWebRadioOSDStyle}"
