--- a/Skin/WMCSkin/screens/webradio_Home.xaml
+++ b/Skin/WMCSkin/screens/webradio_Home.xaml
@@ -55,7 +55,8 @@
                     VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
                     IsVisible="{Binding ElementName=ContentControl,Path=Template,Converter={StaticResource ReferenceToBoolConverter}}"
                     Style="{ThemeResource ContentGroupBoxStyle}">
-            <Control x:Name="ContentControl" Template="{DynamicResource ResourceKey=Contents_Template}" SetFocus="true" />
+            <Control x:Name="ContentControl" Template="{DynamicResource ResourceKey=Contents_Template}"
+                     SetFocus="true" />
           </GroupBox>
           <Control x:Name="AlternativeContentControl" Grid.Row="0" Grid.Column="0"
                    VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
@@ -63,7 +64,8 @@
                    IsVisible="{Binding RelativeSource={RelativeSource Self},Path=Template,Converter={StaticResource ReferenceToBoolConverter}}" />
 
           <Grid x:Name="FadeBackground" Background="#081643" IsVisible="False"
-                VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="-200,-500,-200,-500" Opacity="0">
+                VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="-200,-500,-200,-500"
+                Opacity="0">
             <mp_special_controls:UserInputCapture VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
                                                   MousePositionMode="Relative" Buttons="Left"
                                                   MouseClickedCommand="{CommandStencil Source={StaticResource MenuModel}, Path=CloseMenu}">
@@ -129,14 +131,18 @@
               <MultiTrigger>
                 <MultiTrigger.Conditions>
                   <Condition Property="IsMouseOver" Value="False" />
-                  <Condition Binding="{Binding ElementName=MainMenu, Path=CurrentItem}" Value="{x:Null}" />
-                  <Condition Binding="{Binding ElementName=MenuShowButton, Path=HasFocus}" Value="False" />
+                  <Condition Binding="{Binding ElementName=MainMenu, Path=CurrentItem}"
+                             Value="{x:Null}" />
+                  <Condition Binding="{Binding ElementName=MenuShowButton, Path=HasFocus}"
+                             Value="False" />
                 </MultiTrigger.Conditions>
                 <MultiTrigger.EnterActions>
-                  <TriggerCommand Command="{Command Source={StaticResource MenuModel}, Path=CloseMenu}" />
+                  <TriggerCommand
+                    Command="{Command Source={StaticResource MenuModel}, Path=CloseMenu}" />
                 </MultiTrigger.EnterActions>
                 <MultiTrigger.ExitActions>
-                  <TriggerCommand Command="{Command Source={StaticResource MenuModel}, Path=OpenMenu}" />
+                  <TriggerCommand
+                    Command="{Command Source={StaticResource MenuModel}, Path=OpenMenu}" />
                 </MultiTrigger.ExitActions>
               </MultiTrigger>
               <!-- Setting default state of menu to hidden -->
@@ -144,12 +150,15 @@
                 <TriggerCommand Command="{Command Source={StaticResource MenuModel}, Path=CloseMenu}" />
               </EventTrigger>
               <!-- Slide-In animation when the MenuModel.ShowMenu gets true -->
-              <DataTrigger Binding="{Binding Source={StaticResource MenuModel},Path=IsMenuOpen}" Value="True">
+              <DataTrigger Binding="{Binding Source={StaticResource MenuModel},Path=IsMenuOpen}"
+                           Value="True">
                 <DataTrigger.EnterActions>
-                  <BeginStoryboard x:Name="SlideIn_BeginStoryboard" Storyboard="{ThemeResource SlideInStoryboard}" />
+                  <BeginStoryboard x:Name="SlideIn_BeginStoryboard"
+                                   Storyboard="{ThemeResource SlideInStoryboard}" />
                 </DataTrigger.EnterActions>
                 <DataTrigger.ExitActions>
-                  <BeginStoryboard x:Name="SlideOut_BeginStoryboard" Storyboard="{ThemeResource SlideOutStoryboard}" />
+                  <BeginStoryboard x:Name="SlideOut_BeginStoryboard"
+                                   Storyboard="{ThemeResource SlideOutStoryboard}" />
                   <StopStoryboard BeginStoryboardName="SlideIn_BeginStoryboard" />
                 </DataTrigger.ExitActions>
                 <Setter TargetName="MainMenu" Property="SetFocusPrio" Value="Highest" />
@@ -167,7 +176,8 @@
             <Grid.RenderTransform>
               <TranslateTransform X="0" />
             </Grid.RenderTransform>
-            <Border x:Name="DialogBorder" Margin="10,0,67,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
+            <Border x:Name="DialogBorder" Margin="10,0,67,0" VerticalAlignment="Stretch"
+                    HorizontalAlignment="Stretch"
                     CornerRadius="4" BorderThickness="3">
               <Border.BorderBrush>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="0.02,1.4">
@@ -206,24 +216,29 @@
 
     <!-- Contents -->
     <ControlTemplate x:Key="Contents_Template">
-      <DockPanel DataContext="{Binding Source={StaticResource Model}}" LastChildFill="True" Margin="20,-30,20,-190">
+      <DockPanel DataContext="{Binding Source={StaticResource Model}}" LastChildFill="True"
+                 Margin="20,-30,20,-190">
 
         <!-- Actual Item / Total items -->
-        <DockPanel DockPanel.Dock="Center" VerticalAlignment="Bottom" HorizontalAlignment="Right" LastChildFill="false"
+        <DockPanel DockPanel.Dock="Center" VerticalAlignment="Bottom" HorizontalAlignment="Right"
+                   LastChildFill="false"
                    IsVisible="{Binding IsItemsValid}">
           <StackPanel DockPanel.Dock="Right" Margin="0,-10,25,10" Orientation="Horizontal">
             <Label HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0"
                    Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}">
               <Label.Content>
-                <MultiBinding Converter="{StaticResource GetIndexMultiConverter}" ConverterParameter="1">
+                <MultiBinding Converter="{StaticResource GetIndexMultiConverter}"
+                              ConverterParameter="1">
                   <Binding ElementName="lvStreams" Path="CurrentItem" />
                   <Binding ElementName="lvStreams" Path="ItemsSource" />
                 </MultiBinding>
               </Label.Content>
             </Label>
-            <Label Color="{ThemeResource TextColor}" Content="| " FontSize="{ThemeResource SmallerFontSize}"
+            <Label Color="{ThemeResource TextColor}" Content="| "
+                   FontSize="{ThemeResource SmallerFontSize}"
                    Opacity="0.4" />
-            <Label Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}" Opacity="0.4">
+            <Label Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}"
+                   Opacity="0.4">
               <Label.Content>
                 <Binding ElementName="lvStreams" Path="ItemsSource.Count" />
               </Label.Content>
@@ -287,7 +302,8 @@
                                 ImageSource="{Binding [Logo]}" />
                   </Rectangle.Fill>
                 </Rectangle>
-                <Rectangle Height="250" Width="250" RadiusY="25" RadiusX="25" Stroke="Black" Opacity="0.5">
+                <Rectangle Height="250" Width="250" RadiusY="25" RadiusX="25" Stroke="Black"
+                           Opacity="0.5">
                   <Rectangle.Fill>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                       <GradientStop Color="Black" Offset="0" />
@@ -301,7 +317,8 @@
             </StackPanel>
 
             <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="1" Margin="5,5,5,5">
-              <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Genres]"
+              <Label VerticalAlignment="Center" HorizontalAlignment="Left"
+                     Content="[Webradio.Home.Genres]"
                      Opacity="1.3"
                      FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource MenuTextBackground}" />
 
@@ -310,7 +327,8 @@
                      Content="{Binding [Genres]}" FontSize="{ThemeResource SmallFontSize}"
                      Color="{ThemeResource TextColor}" />
 
-              <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Bitrate]"
+              <Label VerticalAlignment="Center" HorizontalAlignment="Left"
+                     Content="[Webradio.Home.Bitrate]"
                      Opacity="1.3"
                      FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource MenuTextBackground}" />
 
@@ -319,7 +337,8 @@
                      Content="{Binding [Bitrate]}" FontSize="{ThemeResource SmallFontSize}"
                      Color="{ThemeResource TextColor}" />
 
-              <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Country]"
+              <Label VerticalAlignment="Center" HorizontalAlignment="Left"
+                     Content="[Webradio.Home.Country]"
                      Opacity="1.3"
                      FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource MenuTextBackground}" />
 
@@ -328,7 +347,8 @@
                      Content="{Binding [Country]}" FontSize="{ThemeResource SmallFontSize}"
                      Color="{ThemeResource TextColor}" />
 
-              <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.City]" Opacity="1.3"
+              <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.City]"
+                     Opacity="1.3"
                      FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource MenuTextBackground}" />
 
               <Label VerticalAlignment="Center" HorizontalAlignment="Left"
@@ -336,7 +356,8 @@
                      Content="{Binding [City]}" FontSize="{ThemeResource SmallFontSize}"
                      Color="{ThemeResource TextColor}" />
 
-              <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Language]"
+              <Label VerticalAlignment="Center" HorizontalAlignment="Left"
+                     Content="[Webradio.Home.Language]"
                      Opacity="1.3"
                      FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource MenuTextBackground}" />
 
@@ -350,7 +371,8 @@
                    DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
                    Content="{Binding [Description]}" FontSize="{ThemeResource SmallFontSize}"
                    Color="{ThemeResource MenuTextBackground}" Opacity="1.3"
-                   Wrap="True" TextTrimming="WordEllipsis" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                   Wrap="True" TextTrimming="WordEllipsis" HorizontalAlignment="Stretch"
+                   VerticalAlignment="Stretch" />
 
           </Grid>
         </Grid>
