--- a/Skin/default/screens/webradio_FullScreenContent.xaml
+++ b/Skin/default/screens/webradio_FullScreenContent.xaml
@@ -38,7 +38,8 @@
       </Control.Background>
     </Control>
 
-    <mp_audio_viz:AudioSpectrumAnalyzer Grid.ZIndex="100" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Width="600"
+    <mp_audio_viz:AudioSpectrumAnalyzer Grid.ZIndex="100" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                                        Width="600"
                                         Height="300"
                                         HorizontalAlignment="Center" VerticalAlignment="Center"
                                         x:Name="SpectrumAnalyzer" Style="{ThemeResource SpectrumAnalyzerStyle}" />
@@ -69,7 +70,8 @@
                       ImageSource="{Binding}" />
                   </Rectangle.Fill>
                 </Rectangle>
-                <Rectangle Height="150" Width="150" RadiusY="20" RadiusX="20" Stroke="Black" Opacity="0.5">
+                <Rectangle Height="150" Width="150" RadiusY="20" RadiusX="20" Stroke="Black"
+                           Opacity="0.5">
                   <Rectangle.Fill>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                       <GradientStop Color="Black" Offset="0" />
