--- a/Skin/default/screens/webradio_Home.xaml
+++ b/Skin/default/screens/webradio_Home.xaml
@@ -29,7 +29,8 @@
 
           <StackPanel Grid.Row="0" Grid.ColumnSpan="2" Margin="10,10,10,10">
             <Label DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
-                   Content="{Binding [Name]}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"
+                   Content="{Binding [Name]}" HorizontalAlignment="Stretch"
+                   HorizontalContentAlignment="Center"
                    VerticalAlignment="Center" Color="{ThemeResource TextColor}" />
           </StackPanel>
 
@@ -106,14 +107,16 @@
                  DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
                  Content="{Binding [Description]}" FontSize="{ThemeResource SmallerFontSize}"
                  Color="{ThemeResource TextColor}"
-                 Wrap="True" Scroll="Auto" ScrollSpeed="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                 Wrap="True" Scroll="Auto" ScrollSpeed="5" HorizontalAlignment="Stretch"
+                 VerticalAlignment="Stretch" />
 
           <Label Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Left"
                  DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
                  Content="{Binding [Indx]}" FontSize="{ThemeResource SmallerFontSize}"
                  Color="{ThemeResource TextColor}" />
 
-          <ListView x:Name="lvStreams" Grid.Column="2" Grid.RowSpan="4" Margin="10" HorizontalAlignment="Stretch"
+          <ListView x:Name="lvStreams" Grid.Column="2" Grid.RowSpan="4" Margin="10"
+                    HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch" Style="{ThemeResource ContentsMenuListViewStyle}"
                     ItemsSource="{Binding Path=AllRadioStreams}">
             <ListView.Resources>
