--- a/Skin/default/screens/webradio_dialogLoadUpdate.xaml
+++ b/Skin/default/screens/webradio_dialogLoadUpdate.xaml
@@ -30,7 +30,8 @@
                   HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" Margin="10,0,10,0"
                   Command="{Command LoadSenderListe}" />
 
-          <Label Grid.Row="2" Content="{Binding Path=Info}" VerticalAlignment="Center" HorizontalAlignment="Stretch"
+          <Label Grid.Row="2" Content="{Binding Path=Info}" VerticalAlignment="Center"
+                 HorizontalAlignment="Stretch"
                  HorizontalContentAlignment="Center" FontSize="{ThemeResource SmallFontSize}"
                  Color="{ThemeResource TextColor}" Margin="10,0,10,0" Wrap="true" />
 
